Fix layout issue

--- a/assets/css/common/global.css
+++ b/assets/css/common/global.css
@@ -37,10 +37,6 @@ a, .cursor-pointer {
     padding-bottom: 0px;
 }
 
-#pageTarget {
-    display: flex;
-    flex-direction: column;
-}
 
 /**
  * Adapt menu bar to small screens
